# realms

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: cache_rust.yml  realms.yml  realms_examples.yml  rust.yml
docs/: book.md
docs/examples/: 1-window.md
examples/: Cargo.toml  example_1_window.rs  example_2_triangle.rs  example_3_colorful_triangle.rs  example_4_2d_camera.rs  example_5_texture.rs
examples/example1_window/: Cargo.toml
examples/example1_window/src/: main.rs
examples/example2_triangle/: Cargo.toml
examples/example2_triangle/src/: main.rs
examples/example3_colorful_triangle/: Cargo.toml
examples/example3_colorful_triangle/src/: main.rs  vertex.glsl
examples/example4_2d_camera/: Cargo.toml
examples/example4_2d_camera/src/: fragment.glsl  main.rs
examples/shaders/: fragment2.glsl  fragment5.glsl  vertex2.glsl  vertex4.glsl
src/: component.rs  data.rs  input.rs  lib.rs  node.rs  pixel.rs  prelude.rs  rect.rs  shader.rs  shape.rs  sprite.rs  texture.rs  vertex.rs  window.rs
src/builtin_shaders/: shape2d.frag.glsl  shape2d.vert.glsl
