[package]
name = "realms"
version = "1.2.1"
description = "A powerful and lightweight graphics library for making Rust games"
homepage = "https://github.com/dylanopen/realms"
repository = "https://github.com/dylanopen/realms"
readme = "README.md"
edition = "2024"
license = "MIT"
keywords = ["gamedev", "graphics", "game", "engine", "opengl"]
categories = ["game-development", "game-engines", "graphics", "rendering", "rendering::engine"]
# excludes = ["examples"]

[lib]
doctest = false

[dependencies]
gl = "0.14.0"
glfw = "0.59.0"
image = "0.19.0"

