[package]
name = "realms"
version = "3.3.4"
description = "A powerful and lightweight graphics library for making Rust games"
homepage = "https://github.com/dylanopen/realms"
repository = "https://github.com/dylanopen/realms"
documentation = "https://docs.rs/realms"
readme = "README.md"
edition = "2024"
license = "MIT"
keywords = ["gamedev", "graphics", "game", "engine", "opengl"]
categories = ["game-development", "game-engines", "graphics", "rendering", "rendering::engine"]

[lib]
doctest = false

[dependencies]
gl = "0.14.0"
glfw = "0.59.0"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["jpeg", "png"]

