[package]
name = "realms"
version = "3.4.4"
description = "A powerful and lightweight graphics library for making Rust games"
homepage = "https://github.com/dylanopen/realms"
repository = "https://github.com/dylanopen/realms"
documentation = "https://docs.rs/realms"
readme = "README.md"
edition = "2024"
license = "MIT"
keywords = ["gamedev", "graphics", "game", "engine", "opengl"]
categories = ["game-development", "game-engines", "graphics", "rendering", "rendering::engine"]

[lib]
doctest = false

[features]
png = ["image/png"]
jpg = ["image/jpeg"]
all = ["image", "png", "jpg"]
default = ["image", "png", "jpg"]

[dependencies.gl]
version = "0.14.0"
default-features = false

[dependencies.glfw]
version = "0.59.0"
default-features = false
features = ["raw-window-handle-v0-6"]

[dependencies.image]
version = "0.25.6"
default-features = false
optional = true

[lints.rust]
missing_docs = "deny"
unused_doc_comments = "deny"
invalid_doc_attributes = "deny"

[lints.rustdoc]
bare_urls = "deny"
invalid_html_tags = "deny"
private_doc_tests = "deny"
unescaped_backticks = "deny"
broken_intra_doc_links = "deny"
invalid_rust_codeblocks = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
redundant_explicit_links = "deny"
invalid_codeblock_attributes = "deny"

[lints.clippy]

# Cargo lints:
cargo_common_metadata = "deny"
multiple_crate_versions = "allow" # Unfortunately, the `glfw` and `image` crates define completely different versions of `bitflags`.
negative_feature_names = "deny"
redundant_feature_names = "deny"
wildcard_dependencies = "deny"

# Complexity lints:
bind_instead_of_map = "deny"
bool_comparison = "deny"
borrow_deref_ref = "deny"
borrowed_box = "deny"
bytes_count_to_len = "deny"
char_lit_as_u8 = "deny"
clone_on_copy = "deny"
default_constructed_unit_structs = "deny"
deprecated_cfg_attr = "deny"
deref_addrof = "deny"
derivable_impls = "deny"
diverging_sub_expression = "deny"
double_comparisons = "deny"
double_parens = "deny"
duration_subsec = "deny"
excessive_nesting = "deny"
explicit_auto_deref = "deny"
explicit_counter_loop = "deny"
explicit_write = "deny"
extra_unused_lifetimes = "deny"
extra_unused_type_parameters = "deny"
filter_map_identity = "deny"
filter_next = "deny"
flat_map_identity = "deny"
get_last_with_len = "deny"
identity_op = "deny"
implied_bounds_in_impls = "deny"
inspect_for_each = "deny"
int_plus_one = "deny"
iter_count = "deny"
iter_kv_map = "deny"
let_with_type_underscore = "deny"
manual_abs_diff = "deny"
manual_c_str_literals = "deny"
manual_checked_ops = "deny"
manual_clamp = "deny"
manual_div_ceil = "deny"
manual_filter = "deny"
manual_filter_map = "deny"
manual_find = "deny"
manual_find_map = "deny"
manual_flatten = "deny"
manual_hash_one = "deny"
manual_inspect = "deny"
manual_is_multiple_of = "deny"
manual_main_separator_str = "deny"
manual_noop_waker = "deny"
manual_option_zip = "deny"
manual_pop_if = "deny"
manual_ok_err = "deny"
manual_option_as_slice = "deny"
manual_range_patterns = "deny"
manual_rem_euclid = "deny"
manual_slice_size_calculation = "deny"
manual_split_once = "deny"
manual_strip = "deny"
manual_swap = "deny"
manual_take = "deny"
manual_unwrap_or = "deny"
map_all_any_identity = "deny"
map_flatten = "deny"
map_identity = "deny"
match_as_ref = "deny"
match_single_binding = "deny"
needless_arbitrary_self_type = "deny"
needless_as_bytes = "deny"
needless_bool = "deny"
needless_bool_assign = "deny"
needless_borrowed_reference = "deny"
needless_ifs = "deny"
needless_lifetimes = "deny"
needless_match = "deny"
needless_option_as_deref = "deny"
needless_option_take = "deny"
needless_question_mark = "deny"
needless_splitn = "deny"
needless_update = "deny"
neg_cmp_op_on_partial_ord = "deny"
no_effect = "deny"
only_used_in_recursion = "deny"
option_as_ref_deref = "deny"
option_filter_map = "deny"
option_map_unit_fn = "deny"
or_then_unwrap = "deny"
partialeq_ne_impl = "deny"
precedence = "deny"
ptr_offset_with_cast = "deny"
range_zip_with_len = "deny"
redundant_as_str = "deny"
redundant_async_block = "deny"
redundant_at_rest_pattern = "deny"
redundant_closure_call = "deny"
redundant_guards = "deny"
redundant_slicing = "deny"
repeat_once = "deny"
reserve_after_initialization = "deny"
result_filter_map = "deny"
result_map_unit_fn = "deny"
seek_from_current = "deny"
seek_to_start_instead_of_rewind = "deny"
short_circuit_statement = "deny"
single_element_loop = "deny"
skip_while_next = "deny"
string_from_utf8_as_bytes = "deny"
strlen_on_c_strings = "deny"
swap_with_temporary = "deny"
temporary_assignment = "deny"
too_many_arguments = "deny"
transmute_bytes_to_str = "deny"
transmute_int_to_bool = "deny"
transmute_int_to_non_zero = "deny"
transmute_ptr_to_ref = "deny"
transmutes_expressible_as_ptr_casts = "deny"
type_complexity = "deny"
unit_arg = "deny"
unnecessary_cast = "deny"
unnecessary_filter_map = "deny"
unnecessary_find_map = "deny"
unnecessary_first_then_check = "deny"
unnecessary_literal_unwrap = "deny"
unnecessary_map_on_constructor = "deny"
unnecessary_min_or_max = "deny"
unnecessary_operation = "deny"
unnecessary_sort_by = "deny"
unnecessary_unwrap = "deny"
unneeded_wildcard_pattern = "deny"
unused_format_specs = "deny"
useless_asref = "deny"
useless_concat = "deny"
useless_conversion = "deny"
useless_format = "deny"
useless_nonzero_new_unchecked = "deny"
useless_transmute = "deny"
vec_box = "deny"
while_let_loop = "deny"
wildcard_in_or_patterns = "deny"
zero_divided_by_zero = "deny"
zero_prefixed_literal = "deny"

# Correctness lints:
absurd_extreme_comparisons = "deny"
almost_swapped = "deny"
approx_constant = "deny"
async_yields_async = "deny"
bad_bit_mask = "deny"
cast_slice_different_sizes = "deny"
char_indices_as_byte_indices = "deny"
deprecated_semver = "deny"
derive_ord_xor_partial_ord = "deny"
derived_hash_with_manual_eq = "deny"
eager_transmute = "deny"
enum_clike_unportable_variant = "deny"
eq_op = "deny"
erasing_op = "deny"
if_let_mutex = "deny"
ifs_same_cond = "deny"
impl_hash_borrow_with_str_and_bytes = "deny"
impossible_comparisons = "deny"
ineffective_bit_mask = "deny"
infinite_iter = "deny"
inherent_to_string_shadow_display = "deny"
inline_fn_without_body = "deny"
invalid_regex = "deny"
inverted_saturating_sub = "deny"
invisible_characters = "deny"
iter_next_loop = "deny"
iter_skip_zero = "deny"
iterator_step_by_zero = "deny"
let_underscore_lock = "deny"
lint_groups_priority = "deny"
match_str_case_mismatch = "deny"
mem_replace_with_uninit = "deny"
min_max = "deny"
mistyped_literal_suffixes = "deny"
modulo_one = "deny"
mut_from_ref = "deny"
never_loop = "deny"
non_octal_unix_permissions = "deny"
nonsensical_open_options = "deny"
not_unsafe_ptr_arg_deref = "deny"
option_env_unwrap = "deny"
out_of_bounds_indexing = "deny"
panicking_overflow_checks = "deny"
panicking_unwrap = "deny"
possible_missing_comma = "deny"
read_line_without_trim = "deny"
recursive_format_impl = "deny"
redundant_comparisons = "deny"
reversed_empty_ranges = "deny"
self_assignment = "deny"
serde_api_misuse = "deny"
size_of_in_element_count = "deny"
suspicious_splitn = "deny"
transmute_null_to_fn = "deny"
transmuting_null = "deny"
uninit_assumed_init = "deny"
uninit_vec = "deny"
unit_cmp = "deny"
unit_hash = "deny"
unit_return_expecting_ord = "deny"
unsound_collection_transmute = "deny"
unused_io_amount = "deny"
useless_attribute = "deny"
vec_resize_to_zero = "deny"
while_immutable_condition = "deny"
wrong_transmute = "deny"
zst_offset = "deny"

# Nursery lints:
as_ptr_cast_mut = "deny"
branches_sharing_code = "deny"
clear_with_drain = "deny"
coerce_container_to_any = "deny"
collection_is_never_read = "deny"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "deny"
equatable_if_let = "deny"
fallible_impl_from = "deny"
future_not_send = "deny"
imprecise_flops = "deny"
iter_on_empty_collections = "deny"
iter_on_single_items = "deny"
iter_with_drain = "deny"
large_stack_frames = "deny"
literal_string_with_formatting_args = "deny"
missing_const_for_fn = "deny"
needless_collect = "deny"
needless_pass_by_ref_mut = "deny"
needless_type_cast = "deny"
non_send_fields_in_send_ty = "deny"
nonstandard_macro_braces = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"
path_buf_push_overwrite = "deny"
read_zero_byte_vec = "deny"
redundant_clone = "deny"
redundant_pub_crate = "deny"
search_is_some = "deny"
set_contains_or_insert = "deny"
significant_drop_in_scrutinee = "deny"
significant_drop_tightening = "deny"
single_option_map = "deny"
string_lit_as_bytes = "deny"
suboptimal_flops = "deny"
suspicious_operation_groupings = "deny"
trailing_empty_array = "deny"
trait_duplication_in_bounds = "deny"
transmute_undefined_repr = "deny"
trivial_regex = "deny"
tuple_array_conversions = "deny"
type_repetition_in_bounds = "deny"
uninhabited_references = "deny"
unnecessary_struct_initialization = "deny"
unused_peekable = "deny"
unused_rounding = "deny"
use_self = "allow" # It is preferred *not* to use `Self`
useless_let_if_seq = "deny"
volatile_composites = "deny"
while_float = "deny"

# Pedantic lints:
assigning_clones = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"
cloned_instead_of_copied = "deny"
collapsible_else_if = "deny"
comparison_chain = "deny"
copy_iterator = "deny"
decimal_bitwise_operands = "deny"
default_trait_access = "deny"
duration_suboptimal_units = "deny"
elidable_lifetime_names = "deny"
empty_enums = "deny"
enum_glob_use = "deny"
expl_impl_clone_on_copy = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
format_collect = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
if_not_else = "deny"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
inefficient_to_string = "deny"
inline_always = "deny"
into_iter_without_iter = "deny"
invalid_upcast_comparisons = "deny"
ip_constant = "deny"
items_after_statements = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "deny"
iter_without_into_iter = "deny"
large_digit_groups = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
linkedlist = "deny"
macro_use_imports = "deny"
manual_assert = "deny"
manual_ilog2 = "deny"
manual_instant_elapsed = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_midpoint = "deny"
manual_string_new = "deny"
many_single_char_names = "deny"
map_unwrap_or = "deny"
match_bool = "deny"
match_same_arms = "deny"
match_wild_err_arm = "deny"
match_wildcard_for_single_variants = "deny"
maybe_infinite_iter = "deny"
mismatching_type_param_order = "deny"
missing_fields_in_debug = "deny"
must_use_candidate = "deny"
mut_mut = "deny"
naive_bytecount = "deny"
needless_bitwise_bool = "deny"
needless_continue = "deny"
needless_for_each = "deny"
needless_pass_by_value = "deny"
needless_raw_string_hashes = "deny"
no_effect_underscore_binding = "deny"
no_mangle_with_rust_abi = "deny"
non_std_lazy_statics = "deny" 
nonminimal_bool = "deny"
option_as_ref_cloned = "deny"
option_option = "deny"
overly_complex_bool_expr = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
ptr_offset_by_literal = "deny"
pub_underscore_fields = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
ref_as_ptr = "deny"
ref_binding_to_reference = "deny"
ref_option = "deny"
ref_option_ref = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
same_length_and_capacity = "deny"
self_only_used_in_recursion = "deny"
semicolon_if_nothing_returned = "deny"
should_panic_without_expect = "deny"
similar_names = "deny"
single_char_pattern = "deny"
single_match_else = "deny"
stable_sort_primitive = "deny"
str_split_at_newline = "deny"
string_add_assign = "deny"
struct_excessive_bools = "deny"
struct_field_names = "warn"
too_many_lines = "deny"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "deny"
unchecked_time_subtraction = "deny"
unicode_not_nfc = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_join = "deny"
unnecessary_literal_bound = "deny"
unnecessary_semicolon = "deny"
unnecessary_trailing_comma = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
unsafe_derive_deserialize = "deny"
unused_async = "deny"
unused_self = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
verbose_bit_mask = "deny"
wildcard_imports = "deny"
zero_sized_map_values = "deny"

# Performance lints
box_collection = "deny"
boxed_local = "deny"
cloned_ref_to_slice_refs = "deny"
cmp_owned = "deny"
collapsible_str_replace = "deny"
double_ended_iterator_last = "deny"
drain_collect = "deny"
expect_fun_call = "deny"
extend_with_drain = "deny"
format_in_format_args = "deny"
iter_overeager_cloned = "deny"
large_const_arrays = "deny"
large_enum_variant = "deny"
manual_contains = "deny"
manual_ignore_case_cmp = "deny"
manual_memcpy = "deny"
manual_retain = "deny"
manual_str_repeat = "deny"
manual_try_fold = "deny"
map_entry = "deny"
missing_const_for_thread_local = "deny"
missing_spin_loop = "deny"
readonly_write_lock = "deny"
redundant_allocation = "deny"
redundant_iter_cloned = "deny"
regex_creation_in_loops = "deny"
replace_box = "deny"
result_large_err = "deny"
sliced_string_as_bytes = "deny"
slow_vector_initialization = "deny"
to_string_in_format_args = "deny"
unbuffered_bytes = "deny"
unnecessary_to_owned = "deny"
useless_vec = "deny"
vec_init_then_push = "deny"
waker_clone_wake = "deny"

# Restriction lints
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "allow" # We don't care if things are ordered alphabetically
arithmetic_side_effects = "deny"
as_conversions = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
assertions_on_result_states = "deny"
big_endian_bytes = "deny"
cfg_not_test = "deny"
clone_on_ref_ptr = "deny"
cognitive_complexity = "deny"
create_dir = "deny"
dbg_macro = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
default_union_representation = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
exit = "deny"
expect_used = "deny"
field_scoped_visibility_modifiers = "deny"
filetype_is_file = "deny"
float_arithmetic = "allow" # We need floating point arithmetic for a graphics library.
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
implicit_return = "allow"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
little_endian_bytes = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
min_ident_chars = "allow" # Single-character variables are fine in certain cases.
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
missing_inline_in_public_items = "deny"
missing_trait_methods = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "deny"
module_name_repetitions = "deny"
modulo_arithmetic = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
non_zero_suggestions = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
pointer_format = "deny"
precedence_bits = "deny"
print_stderr = "deny"
print_stdout = "deny"
pub_use = "deny"
pub_with_shorthand = "deny"
pub_without_shorthand = "deny"
question_mark_used = "allow" # Allow ?, however it is heavily discouraged unless using .map_err()
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
return_and_then = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
semicolon_outside_block = "allow" # unsafe { gl::a(b); } is better than unsafe { gl::a(b) };
separated_literal_suffix = "allow" # Prefer 3_u32 to 3u32
shadow_reuse = "allow" # Allow all shadowing
shadow_same = "allow" # Allow all shadowing
shadow_unrelated = "allow" # Allow all shadowing
single_call_fn = "warn"
single_char_lifetime_names = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
todo = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "allow" # There are just too many, we are using raw OpenGL.
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unreachable = "deny"
unseparated_literal_suffix = "deny"
unused_result_ok = "deny"
unused_trait_names = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

# Style lints
assertions_on_constants = "deny"
assign_op_pattern = "deny"
blocks_in_conditions = "deny"
bool_assert_comparison = "deny"
borrow_interior_mutable_const = "deny"
box_default = "deny"
builtin_type_shadow = "deny"
byte_char_slices = "deny"
bytes_nth = "deny"
chars_last_cmp = "deny"
chars_next_cmp = "deny"
cmp_null = "deny"
collapsible_if = "deny"
collapsible_match = "deny"
comparison_to_empty = "deny"
default_instead_of_iter_empty = "deny"
disallowed_fields = "deny"
disallowed_macros = "deny"
disallowed_methods = "deny"
disallowed_names = "deny"
disallowed_types = "deny"
double_must_use = "deny"
duplicate_underscore_argument = "deny"
enum_variant_names = "deny"
err_expect = "deny"
excessive_precision = "deny"
field_reassign_with_default = "deny"
filter_map_bool_then = "deny"
fn_to_numeric_cast = "deny"
fn_to_numeric_cast_with_truncation = "deny"
for_kv_map = "deny"
from_over_into = "deny"
from_str_radix_10 = "deny"
get_first = "deny"
if_same_then_else = "deny"
implicit_saturating_add = "deny"
implicit_saturating_sub = "deny"
inconsistent_digit_grouping = "deny"
infallible_destructuring_match = "deny"
inherent_to_string = "deny"
init_numbered_fields = "deny"
into_iter_on_ref = "deny"
io_other_error = "deny"
is_digit_ascii_radix = "deny"
items_after_test_module = "deny"
iter_cloned_collect = "deny"
iter_next_slice = "deny"
iter_nth = "deny"
iter_nth_zero = "deny"
iter_skip_next = "deny"
just_underscores_and_digits = "deny"
legacy_numeric_constants = "deny"
len_without_is_empty = "deny"
len_zero = "deny"
let_and_return = "deny"
let_unit_value = "deny"
main_recursion = "deny"
manual_async_fn = "deny"
manual_bits = "deny"
manual_dangling_ptr = "deny"
manual_is_ascii_check = "deny"
manual_is_finite = "deny"
manual_is_infinite = "deny"
manual_map = "deny"
manual_next_back = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_pattern_char_comparison = "deny"
manual_range_contains = "deny"
manual_repeat_n = "deny"
manual_rotate = "deny"
manual_saturating_arithmetic = "deny"
manual_slice_fill = "deny"
manual_while_let_some = "deny"
map_clone = "deny"
map_collect_result_unit = "deny"
match_like_matches_macro = "deny"
match_overlapping_arm = "deny"
match_ref_pats = "deny"
match_result_ok = "deny"
mem_replace_option_with_none = "deny"
mem_replace_option_with_some = "deny"
mem_replace_with_default = "deny"
missing_enforced_import_renames = "deny"
missing_safety_doc = "deny"
mixed_attributes_style = "deny"
mixed_case_hex_literals = "deny"
module_inception = "deny"
multiple_bound_locations = "deny"
must_use_unit = "deny"
mut_mutex_lock = "deny"
needless_borrow = "deny"
needless_borrows_for_generic_args = "deny"
needless_doctest_main = "deny"
needless_else = "deny"
needless_late_init = "deny"
needless_parens_on_range_literals = "deny"
needless_pub_self = "deny"
needless_range_loop = "deny"
needless_return = "deny"
needless_return_with_question_mark = "deny"
neg_multiply = "deny"
new_ret_no_self = "deny"
new_without_default = "deny"
non_minimal_cfg = "deny"
obfuscated_if_else = "deny"
ok_expect = "deny"
op_ref = "deny"
option_map_or_none = "deny"
owned_cow = "deny"
partialeq_to_none = "deny"
print_literal = "deny"
print_with_newline = "deny"
println_empty_string = "deny"
ptr_arg = "deny"
ptr_eq = "deny"
question_mark = "deny"
redundant_closure = "deny"
redundant_field_names = "deny"
redundant_pattern = "deny"
redundant_pattern_matching = "deny"
redundant_static_lifetimes = "deny"
result_map_or_into_option = "deny"
result_unit_err = "deny"
same_item_push = "deny"
self_named_constructors = "deny"
should_implement_trait = "deny"
single_char_add_str = "deny"
single_component_path_imports = "deny"
single_match = "deny"
string_extend_chars = "deny"
to_digit_is_some = "deny"
to_string_trait_impl = "deny"
toplevel_ref_arg = "deny"
trim_split_whitespace = "deny"
unnecessary_fallible_conversions = "deny"
unnecessary_fold = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_map_or = "deny"
unnecessary_mut_passed = "deny"
unnecessary_owned_empty_strings = "deny"
unneeded_struct_pattern = "deny"
unsafe_removed_from_name = "deny"
unused_enumerate_index = "deny"
unused_unit = "deny"
unusual_byte_groupings = "deny"
unwrap_or_default = "deny"
upper_case_acronyms = "deny"
while_let_on_iterator = "deny"
write_literal = "deny"
write_with_newline = "deny"
writeln_empty_string = "deny"
wrong_self_convention = "deny"
zero_ptr = "deny"

# Suspicious lints
almost_complete_range = "deny"
arc_with_non_send_sync = "deny"
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
blanket_clippy_restriction_lints = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_constructor = "deny"
cast_enum_truncation = "deny"
cast_nan_to_int = "deny"
cast_slice_from_raw_parts = "deny"
confusing_method_to_numeric_cast = "deny"
const_is_empty = "deny"
crate_in_macro_def = "deny"
crosspointer_transmute = "deny"
declare_interior_mutable_const = "deny"
deprecated_clippy_cfg_attr = "deny"
drop_non_drop = "deny"
duplicate_mod = "deny"
duplicated_attributes = "deny"
empty_docs = "deny"
empty_line_after_outer_attr = "deny"
empty_loop = "deny"
float_equality_without_abs = "deny"
forget_non_drop = "deny"
four_forward_slashes = "deny"
from_raw_with_void_ptr = "deny"
incompatible_msrv = "deny"
ineffective_open_options = "deny"
infallible_try_from = "deny"
iter_out_of_bounds = "deny"
join_absolute_paths = "deny"
let_underscore_future = "deny"
lines_filter_map_ok = "deny"
macro_metavars_in_unsafe = "deny"
manual_unwrap_or_default = "deny"
misnamed_getters = "deny"
misrefactored_assign_op = "deny"
missing_transmute_annotations = "deny"
multi_assignments = "deny"
mut_range_bound = "deny"
mutable_key_type = "deny"
needless_character_iteration = "deny"
needless_maybe_sized = "deny"
no_effect_replace = "deny"
non_canonical_clone_impl = "deny"
non_canonical_partial_ord_impl = "deny"
octal_escapes = "deny"
path_ends_with_ext = "deny"
permissions_set_readonly_false = "deny"
pointers_in_nomem_asm_block = "deny"
possible_missing_else = "deny"
print_in_format_impl = "deny"
rc_clone_in_vec_init = "deny"
redundant_locals = "deny"
repeat_vec_with_capacity = "deny"
repr_packed_without_abi = "deny"
single_range_in_vec_init = "deny"
size_of_ref = "deny"
suspicious_arithmetic_impl = "deny"
suspicious_assignment_formatting = "deny"
suspicious_command_arg_space = "deny"
suspicious_else_formatting = "deny"
suspicious_map = "deny"
suspicious_op_assign_impl = "deny"
suspicious_open_options = "deny"
suspicious_to_owned = "deny"
suspicious_unary_op_formatting = "deny"
swap_ptr_to_ref = "deny"
test_attr_in_doctest = "deny"
type_id_on_box = "deny"
unconditional_recursion = "deny"
unnecessary_clippy_cfg = "deny"
unnecessary_get_then_check = "deny"
unnecessary_option_map_or_else = "deny"
unnecessary_result_map_or_else = "deny"
zero_repeat_side_effects = "deny"
zombie_processes = "deny"

# Documentation lints
missing_panics_doc = "deny"
missing_errors_doc = "deny"
missing_docs_in_private_items = "deny"
doc_link_code = "deny"
too_long_first_doc_paragraph = "deny"
doc_broken_link = "deny"
doc_comment_double_space_linebreaks = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
suspicious_doc_comments = "deny"
doc_include_without_cfg = "deny"
doc_paragraphs_missing_punctuation = "deny"
doc_lazy_continuation = "deny"
doc_overindented_list_items = "deny"
tabs_in_doc_comments = "deny"
doc_nested_refdefs = "deny"
doc_suspicious_footnotes = "deny"
empty_line_after_doc_comments = "deny"

